<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.NOWIS.OrderListActivity$PlaceholderFragment" >

  
        
       <Button
        android:id="@+id/men_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_section2" />

    <Button
        android:id="@+id/woman_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/men_button"
        android:layout_alignBottom="@+id/men_button"
        android:layout_marginLeft="43dp"
        android:layout_toRightOf="@+id/men_button"
        android:text="@string/title_section3" />

    <Button
        android:id="@+id/kids_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_below="@+id/men_button"
        android:layout_marginTop="27dp"
        android:text="@string/title_section4" />
 
</RelativeLayout>
